# tinyllama-pubmedqa-finetuning

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: axolotl_pubmedqa_context_completion_qlora.yaml  axolotl_pubmedqa_qlora.yaml
results/: metrics_tidy.csv  model_registry.csv
scripts/: plot_results.py
src/llm_ft_eval/: __init__.py  data.py  evaluate.py  metrics.py
tests/: test_metrics.py
