[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-finetuning-evaluation"
version = "0.1.0"
description = "Benchmarking small-LLM fine-tuning strategies on PubMedQA."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
